# Django-Behave-SPIKE

./: .gitignore  LICENCE  README.md  load-design-system-templates.sh  manage.py  pyproject.toml
ONSWebsite/: asgi.py  settings.py  urls.py  wsgi.py
features/: environment.py  example.feature  homepage_fixture.json
features/steps/: steps.py
onsApp/: apps.py  models.py  views.py
onsApp/migrations/: 0001_initial.py  0002_create_homepage.py
onsApp/templates/onsApp/: accessibility_statement.html  cookies.html  index.html  layout.html  page_1.html  page_2.html  page_3.html  privacy_data.html
