[tool.poetry]
name = "django-test-bed"
version = "0.1.0"
description = ""
authors = ["sanjeevz3009 <sanjeevz1717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-jinja = "^2.11.0"
behave-django = "^1.5.0"
playwright = "^1.48.0"
pytest = "^8.3.3"
pytest-playwright = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
